<resources>
    <string name="app_name">WomenSafetyApp</string>
    <string name="greeting">Welcome!</string>
    <string name="login_guide">Please login to continue!</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="swipe_right_to_register">Swipe left to register a new account</string>
    <string name="register">Register</string>
    <string name="register_guide">Create an account instantly!</string>
    <string name="enter_name">Name</string>
    <string name="enter_retype_password">Re-type password</string>
    <string name="to_register">Create New Account</string>
    <string name="to_forgot_password">Forgot Password?</string>
    <string name="to_login">I Have An Account</string>
    <string name="guardian_name">Guardian\'s Name</string>
    <string name="relationship">Relationship</string>
    <string name="enter_contact">Contact No. (e.g: 012-3456789)</string>
    <string name="guardian_details">Guardian</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="guardian_contact">Guardian\'s contact</string>
    <string name="add_guardian_detail">"Add details"</string>
    <string name="delete">Delete</string>
    <string name="check_in">Check-In</string>
    <string name="location">Location:</string>
    <string name="date_time"><![CDATA[Date & Time:]]></string>
    <string name="update_details">Update Details</string>
    <string name="am_guardian">I am a Guardian</string>
    <string name="am_user">I am a User</string>
    <string name="account_tyoe">Select Account Type</string>
    <string name="guardian_ID">Guardian\'s ID</string>
    <string name="id">ID</string>
    <string name="visited_locations">Visited Locations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_sendSMS">SEND SMS</string>
    <string name="mobile_number">01111281209</string>
    <string name="phone_call">CALL POLICE</string>
    <string name="sos_protocol">SOS Protocol</string>
    <string name="timelapse">Protocol timelapse</string>
    <string name="stop">Stop</string>
    <string name="sos_info">"Current location is constantly being shared to guardian every 5 minutes! "</string>
    <string name="current_locaiton">Current Location</string>
    <string name="sos">S.O.S</string>
    <string name="update_profile">Update Profile</string>
    <string name="user_name">Name</string>
    <string name="save_changes">Save Changes</string>
    <string name="profile">Profile</string>
    <string name="user_id">"ID"</string>
    <string name="user_email">Email</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="users_location">View Location</string>
</resources>