<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SOSActivity"
    android:gravity="center">

    <TextView
        android:id="@+id/sos_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sos_protocol"
        android:layout_marginTop="30dp"
        android:textSize="40dp"
        android:textColor="#DC143C"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/info_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sos_info"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"/>

    <TextView
        android:id="@+id/timelapse_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timelapse"
        android:paddingLeft="20dp"
        android:layout_marginTop="40dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"/>

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="50dp"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/currentLocation_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_locaiton"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"/>

    <TextView
        android:id="@+id/displayLocation_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:paddingLeft="30dp"
        android:paddingRight="20dp"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"/>

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/stop"/>


</LinearLayout>