<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="20dp"
    app:cardCornerRadius="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@drawable/cardview_background">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:src="@drawable/ic_user_icon"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/item_guardian_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imageView"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textStyle="bold"
            android:textSize="20dp"
            android:text="@string/guardian_name"/>

        <TextView
            android:id="@+id/item_relationship"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_guardian_name"
            android:layout_toRightOf="@id/imageView"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textSize="18dp"
            android:text="@string/relationship"/>

        <TextView
            android:id="@+id/item_guardian_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView"
            android:layout_below="@id/item_relationship"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textSize="18dp"
            android:text="@string/guardian_contact"
            />

        <TextView
            android:id="@+id/item_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_guardian_contact"
            android:layout_toRightOf="@id/imageView"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textSize="18dp"
            android:text="@string/guardian_ID"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>