<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile_tv"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:textSize="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/mint"
        android:fontFamily="@font/dancing_script_bold"
        android:text="@string/profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_user_icon"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/userID_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/imageView"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:text="@string/user_id"/>

                <TextView
                    android:id="@+id/userName_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/userID_tv"
                    android:layout_toRightOf="@id/imageView"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textSize="18dp"
                    android:text="@string/user_name"/>

                <TextView
                    android:id="@+id/userEmail_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/imageView"
                    android:layout_below="@id/userName_tv"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:textSize="18dp"
                    android:text="@string/user_email"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.13"
        android:orientation="vertical">

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="110dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:drawableLeft="@drawable/ic_logout"
            android:gravity="left"
            android:text="@string/logout" />
    </LinearLayout>

</LinearLayout>