<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmergencyFragment">


    <Button
        android:id="@+id/btn_sendLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/phone_call_button"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/white"
        android:text="@string/btn_sendSMS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_fake_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/phone_call_button"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/white"
        android:text="@string/phone_call"
        app:layout_constraintBottom_toTopOf="@+id/btn_sendLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/phone_call_button"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/white"
        android:backgroundTint="#DC143C"
        android:text="@string/sos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sendLocation" />
</androidx.constraintlayout.widget.ConstraintLayout>